# Conculandia

./: Asistente.cpp  Asistente.h  CMakeLists.txt  Contadores.cpp  Contadores.h  Generador.cpp  Generador.h  Logger.cpp  Logger.h  README.md  main.cpp
Entidades/: Ministerio.cpp  Ministerio.h  Ministro.cpp  Ministro.h  Policia.cpp  Policia.h
Fifo/: Fifo.cpp  Fifo.h  FifoEscritura.cpp  FifoEscritura.h  FifoLectura.cpp  FifoLectura.h
Lock/: LockFile.cpp  LockFile.h
MemoriaCompartida/: MemoriaCompartida.h
Personas/: Empleado.cpp  Empleado.h  Residente.cpp  Residente.h  Turista.cpp  Turista.h
Semaforo/: Semaforo.cpp  Semaforo.h
Seniales/: EventHandler.h  SIGINT_Handler.h  SignalHandler.cpp  SignalHandler.h
